kubernetes-deploy/attaouba_deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hvemsahva-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hvemsahva-ui
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: hvemsahva-ui
    spec:
      containers:
        - name: hvemsahva-ui
          image: gcr.io/api-project-767352099547/attouba-register-ui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 3
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: attouba-register-ui-service
  labels:
    app: attouba-register-ui
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - name: port0
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: attouba-register-ui
  type: NodePort
